fix(Safari): Fix mobile double tapping for toolbar and overflow.
* Create generic tooltip wrapper for mobile usability.
* Change overflow menu icon/font/padding sizes.
* Change overflow drawer expand icon.

--- a/css/_drawer.scss
+++ b/css/_drawer.scss
@@ -7,7 +7,7 @@
 }
 
 .drawer-menu {
-    padding: 12px 16px;
+    padding: 0 16px;
     max-height: 50vh;
     background: #242528;
     border-radius: 16px 16px 0 0;
@@ -24,12 +24,14 @@
         height: 44px;
         cursor: pointer;
 
-        &:hover {
-            background-color: $overflowMenuItemHoverBG;
+        @media (hover: hover) and (pointer: fine) {
+            &:hover {
+                background-color: $overflowMenuItemHoverBG;
+            }
         }
 
-        svg, path {
-            fill: #b8c7e0;
+        svg {
+            fill: none;
         }
     }
 
@@ -57,7 +59,7 @@
             color: $overflowMenuItemColor;
             cursor: pointer;
             display: flex;
-            font-size: 14px;
+            font-size: 16px;
 
             div {
                 display: flex;
@@ -65,16 +67,20 @@
                 align-items: center;
             }
 
-            &:hover {
-                background-color: $overflowMenuItemHoverBG;
-                color: $overflowMenuItemHoverColor;
+            @media (hover: hover) and (pointer: fine) {
+                &:hover {
+                    background-color: $overflowMenuItemHoverBG;
+                    color: $overflowMenuItemHoverColor;
+                }
             }
 
             &.unclickable {
                 cursor: default;
             }
-            &.unclickable:hover {
-                background: inherit;
+            @media (hover: hover) and (pointer: fine) {
+                &.unclickable:hover {
+                    background: inherit;
+                }
             }
             &.disabled {
                 cursor: initial;
@@ -93,15 +99,17 @@
         }
 
         .overflow-menu-item-icon {
-            margin-right: 10px;
+            margin-right: 16px;
 
             i {
                 display: inline;
                 font-size: 24px;
             }
 
-            i:hover {
-                background-color: initial;
+            @media (hover: hover) and (pointer: fine) {
+                i:hover {
+                    background-color: initial;
+                }
             }
 
             img {
@@ -111,11 +119,13 @@
 
             svg {
                 fill: #B8C7E0 !important;
+                height: 20px;
+                width: 20px;
             }
         }
 
         .profile-text {
-            max-width: 150px;
+            max-width: 100%;
             text-overflow: ellipsis;
             overflow: hidden;
             white-space: nowrap;
